tests/suite/errors/e45_empty_hex_literal.rs
// err: expected hex digits after '0x'

fn main() {
    let _x = 0x;
}
